--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "forge-std": "foundry-rs/forge-std",
-    "openzeppelin-solidity": "openzeppelin/openzeppelin-contracts"
+    "forge-std": "https://github.com/foundry-rs/forge-std",
+    "openzeppelin-solidity": "https://github.com/OpenZeppelin/openzeppelin-contracts"
   }
 }
